--- a/combustiveis.html
+++ b/combustiveis.html
@@ -30,7 +30,7 @@
   <main>
     <section id="fuel" class="section active">
 
-    <!-- Swiper -->
+    <!-- Swiper
     <div class="banner-horizontal banner-topo swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -49,7 +49,7 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-    <!-- Fim Swiper -->
+    Fim Swiper -->
 
       <div class="container">
         <h1><i class="fas fa-gas-pump"></i> Postos de Combustível</h1>
