--- a/combustiveis.html
+++ b/combustiveis.html
@@ -43,9 +43,7 @@
           <img src="assets/banners/banner-topo-3.jpg" alt="Publicidade Topo 3">
         </div>
       </div>
-      <!-- Adiciona paginação -->
       <div class="swiper-pagination"></div>
-      <!-- Adiciona navegação -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
@@ -93,6 +91,7 @@
         </div>
       </div>
     </section>
+    <!--
     <div class="banner-horizontal banner-rodape swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -105,12 +104,10 @@
           <img src="assets/banners/banner-rodape-3.jpg" alt="Publicidade Rodapé 3">
         </div>
       </div>
-      <!-- Adiciona paginação -->
       <div class="swiper-pagination"></div>
-      <!-- Adiciona navegação -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
-    </div>
+    </div> -->
   </main>
 
   <footer class="site-footer">
