--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
 
   <main>
     <section id="contact" class="section active">
-      <!-- Swiper -->
+      <!-- Swiper 
       <div class="banner-horizontal banner-topo swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -42,13 +42,13 @@
             <img src="assets/banners/banner-topo-3.jpg" alt="Publicidade Topo 3">
           </div>
         </div>
-        <!-- Adiciona paginação -->
+         Adiciona paginação 
         <div class="swiper-pagination"></div>
-        <!-- Adiciona navegação -->
+         Adiciona navegação
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
-      <!-- Fim Swiper -->
+       Fim Swiper -->
       <div class="container">
         <h1><i class="fas fa-comment-dots"></i> Contato</h1>
         <h2>Fala aí, meu consagrado!</h2>
@@ -74,6 +74,7 @@
         </div>
       </div>
     </section>
+    <!--
     <div class="banner-horizontal banner-rodape swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -86,12 +87,12 @@
           <img src="assets/banners/banner-rodape-3.jpg" alt="Publicidade Rodapé 3">
         </div>
       </div>
-      <!-- Adiciona paginação -->
+       
       <div class="swiper-pagination"></div>
-      <!-- Adiciona navegação -->
+      
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
-    </div>
+    </div>  -->
   </main>
 
   <footer class="site-footer">
