--- a/contato.html
+++ b/contato.html
@@ -98,7 +98,7 @@
   <footer class="site-footer">
     <div class="footer-container">
       <p>&copy; <strong>2025 Agustinho - De motora para motora</strong> | Desenvolvido por Yuri Natividade | Todos os direitos reservados.</p>
-      <a href="#" class="buy-coffee-button"><i class="fas fa-mug-hot"></i> Comprar um café</a>
+      <!-- <a href="#" class="buy-coffee-button"><i class="fas fa-mug-hot"></i> Comprar um café</a> -->
     </div>
   </footer>
 
