--- a/combustiveis.html
+++ b/combustiveis.html
@@ -113,7 +113,7 @@
   <footer class="site-footer">
     <div class="footer-container">
       <p>&copy; <strong>2025 Agustinho</strong>. Desenvolvido por Yuri Natividade. Todos os direitos reservados.</p>
-      <a href="#" class="buy-coffee-button"><i class="fas fa-mug-hot"></i> Comprar um café</a>
+      <!-- <a href="#" class="buy-coffee-button"><i class="fas fa-mug-hot"></i> Comprar um café</a> -->
     </div>
   </footer>
   <script src="script.js"></script>
